--- a/src/app/list-plat/list-plat.component.html
+++ b/src/app/list-plat/list-plat.component.html
@@ -1,11 +1,12 @@
 
 <app-navbar class="fixed-top" style="width:100%"></app-navbar>
-<app-menu class="col-md-2" style="position:fixed;left: 0;" ></app-menu>
+
+<app-menu class="col-md-3" style="width: 100%;"></app-menu>
 <div class="row bottom-div">
-    <div class="col-md-2">
+    <div class="col-md-3">
         
     </div>
-    <div class="col-md-10">
+    <div class="col-md-9">
         <div class="row">
             <div class="col-md-3"><app-plat></app-plat></div>
             <div class="col-md-3"><app-plat></app-plat></div>
