--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,20 +1,26 @@
-<div class="container">
-    <div class="link">
-        <div class="text">Home</div>
-    </div>
-    <div class="link">
-        <div class="text">Projects</div>
-    </div>
-    <div class="link">
-        <div class="text">Art</div>
-    </div>
-    <div class="link">
-        <div class="text">Social</div>
-    </div>
-    <div class="link">
-        <div class="text">Setup</div>
-    </div>
-    <div class="link">
-        <div class="text">Help</div>
-    </div>
-</div>
+<div class="sidenav">
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+  </div>
