--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,16 +7,37 @@
         <div class="col-md-12">
           <div class="form-block mx-auto">
             <div class="text-center mb-5">
-              <h3 class="text-uppercase">Login to <strong>Colorlib</strong></h3>
+              <h3 class="text-uppercase">Inscription <strong>E-kaly</strong></h3>
             </div>
             <form action="#" method="post">
               <div class="form-group first">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" placeholder="your-email@gmail.com" id="username">
+                <label for="username">Nom d'utilisateur</label>
+                <input type="text" name="username" class="form-control" placeholder="" id="username">
               </div>
               <div class="form-group last mb-3">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" placeholder="Your Password" id="password">
+                <label for="password">Tel</label>
+                <input type="text" name="tel" class="form-control" placeholder="">
+              </div>
+              <div class="form-group last mb-3">
+                <label for="password">Adresse</label>
+                <input type="text" name="address" class="form-control" placeholder="">
+              </div>
+              <div class="form-group last mb-3">
+                <label for="password">email</label>
+                <input type="mail" name="email" class="form-control" placeholder="">
+              </div>
+
+              <div class="form-group last mb-3">
+                <label for="password">Mot de passe</label>
+                <input type="password" class="form-control" placeholder="votre mot de passe" id="password">
+              </div>
+
+              <div class="form-group last mb-3">
+                <label for="password">Type</label>
+                <select name="role">
+                  <option *ngFor="let item of role" >{{item}}</option>
+                </select>
+                <input type="password" class="form-control" placeholder="votre mot de passe" id="password">
               </div>
               
               <div class="d-sm-flex mb-5 align-items-center">
