--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,21 @@
-<router-outlet></router-outlet>
-<footer class="site-footer">
-<div class="container-fluid">
-    <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-        <p class="copyright-text">Ekaly Copyright &copy; 2022 All Rights Reserved by 
-        <a href="#">RATSIMANIRIMANANA Andrianaina Henintsoa</a>.
-        </p>
-    </div>
+<div class="row">
+    <div class="col-md-12">
+        <router-outlet></router-outlet>
     </div>
 </div>
-</footer>
+<div class="row">
+    <div class="col-md-12">
+        <footer class="">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <p class="copyright-text">Ekaly Copyright &copy; 2022 All Rights Reserved by
+                            <a href="#">RATSIMANIRIMANANA Andrianaina Henintsoa</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+</div>
