--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,77 +1,76 @@
-
 <main id="cart" style="max-width:960px">
-    <div class="back"><a href="#">&#11178; shop</a></div>
-    <h1>Your Cart</h1>
-    <div class="container-fluid">
-      <div class="row align-items-start">
-        <div class="col-12 col-sm-8 items">
-          <!--1-->
-          <div class="cartItem row align-items-start">
-            <div class="col-3 mb-2">
-              <img class="w-100" src="https://badux.co/smc/codepen/birdcage-posters.jpg" alt="art image">
-            </div>
-            <div class="col-5 mb-2">
-              <h6 class="">Dark Art 1</h6>
-              <p class="pl-1 mb-0">20 x 24</p>
-              <p class="pl-1 mb-0">Matte Print</p>
-            </div>
-            <div class="col-2">
-              <p class="cartItemQuantity p-1 text-center">1</p>
-            </div>
-            <div class="col-2">
-              <p id="cartItem1Price">$66</p>
-            </div>
+  <div class="back"><a href="plat">&#11178; shop</a></div>
+  <h1>Panier</h1>
+  <div class="container-fluid">
+    <div class="row align-items-start">
+      <div class="col-12 col-sm-8 items">
+        <!--1-->
+        <div *ngFor="let item of cart" class="cartItem row align-items-start">
+          <div class="col2 mb-2">
+            <img class="w-100" src="https://badux.co/smc/codepen/birdcage-posters.jpg" alt="art image">
           </div>
-          <hr>
-          <!--2-->
-          <div class="cartItem row align-items-start">
-            <div class="col-3 mb-2">
-              <img class="w-100" src="https://badux.co/smc/codepen/birdcage-posters.jpg" alt="art image">
-            </div>
-            <div class="col-5 mb-2">
-              <h6 class="">Dark Art 2</h6>
-              <p class="pl-1 mb-0">20 x 24</p>
-              <p class="pl-1 mb-0">Matte Print</p>
-            </div>
-            <div class="col-2">
-              <p class="cartItemQuantity p-1 text-center">1</p>
-            </div>
-            <div class="col-2">
-              <p id="cartItem1Price">$66</p>
-            </div>
+          <div class="col-4 mb-2">
+            <h6 class="">{{item.name}}</h6>
+            <p class="pl-1 mb-0">{{item.restaurant}}</p>
           </div>
-          <hr>
+          <div class="col-2">
+            <p class="cartItemQuantity p-1 text-center" id="cartItem1Price">{{item.prix}}Ar</p>
+          </div>
+          <div class="col-3">
+            <p class="cartItemQuantity p-1 text-center">
+              <button class="btn btn-dark" (click)="minus(item.id)">-</button>
+              {{item.nb}}
+              <button class="btn btn-dark" (click)="plus(item.id)">+</button>
+            </p>
+          </div>
         </div>
-        <div class="col-12 col-sm-4 p-3 proceed form">
-          <div class="row m-0">
-            <div class="col-sm-8 p-0">
-              <h6>Subtotal</h6>
-            </div>
-            <div class="col-sm-4 p-0">
-              <p id="subtotal">$132.00</p>
-            </div>
+        <hr>
+      </div>
+      <div class="col-12 col-sm-4 p-3 proceed form">
+        <div class="row m-0">
+          <div class="col-sm-8 p-0">
+            <h6>Subtotal</h6>
           </div>
-          <div class="row m-0">
-            <div class="col-sm-8 p-0 ">
-              <h6>Tax</h6>
-            </div>
-            <div class="col-sm-4 p-0">
-              <p id="tax">$6.40</p>
-            </div>
+          <div class="col-sm-4 p-0">
+            <p id="subtotal">{{total}}</p>
           </div>
-          <hr>
-          <div class="row mx-0 mb-2">
-            <div class="col-sm-8 p-0 d-inline">
-              <h5>Total</h5>
-            </div>
-            <div class="col-sm-4 p-0">
-              <p id="total">$138.40</p>
-            </div>
-          </div>
-          <a href="#"><button id="btn-checkout" class="shopnow"><span>Checkout</span></button></a>
         </div>
+        <div class="row m-0">
+          <div class="col-sm-8 p-0 ">
+            <h6>Tax</h6>
+          </div>
+          <div class="col-sm-4 p-0">
+            <p id="tax">0</p>
+          </div>
+        </div>
+        <hr>
+        <div class="row mx-0 mb-2">
+          <div class="col-sm-8 p-0 d-inline">
+            <h5>Total</h5>
+          </div>
+          <div class="col-sm-4 p-0">
+            <p id="total">{{total}}</p>
+          </div>
+        </div>
+        <div class="row m-0">
+          <div class="col-sm-8 p-0">
+            <form #f="ngForm" method="post" (ngSubmit)="commander(f)">
+              {{f.value|json}}
+              <div class="col-sm-8 p-0 d-inline">
+                <label>Adresse de livraison</label>
+                <input type="text" class="form-control" name="address" ngModel>
+              </div>
+              <div class="col-sm-8 p-0 d-inline">
+                <label>Date de livraison</label>
+                <input type="date" id="datelivraison" class="form-control" name="livraisondate" ngModel>
+              </div>
+              <br>
+              <button type="submit" id="btn-checkout" class="shopnow"><span>COMMANDER</span></button>
+            </form>
+          </div>
+        </div>
+
       </div>
     </div>
-  </main>
-  
-  
+  </div>
+</main>
