--- a/src/app/list-plat/list-plat.component.html
+++ b/src/app/list-plat/list-plat.component.html
@@ -1,24 +1,14 @@
+<!-- <app-navbar  class="fixed-top" style="width:100%"></app-navbar> -->
 
-<app-navbar class="fixed-top" style="width:100%"></app-navbar>
-
-<app-menu class="col-md-3" style="width: 100%;"></app-menu>
+<app-menu [listrestaurant]="listrestaurant" class="col-md-3" style="width: 100%;"></app-menu>
 <div class="row bottom-div">
     <div class="col-md-3">
-        
+
     </div>
     <div class="col-md-9">
         <div class="row">
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-            <div class="col-md-3"><app-plat></app-plat></div>
-        </div> 
-        <div class="row"><app-pagination style="width: 100%;"></app-pagination></div>
+            <app-plat class="col-md-4" *ngFor="let plat of listplat" [plat]="plat"></app-plat>
+        </div>
+        <!-- <div class="row"><app-pagination style="width: 100%;"></app-pagination></div> -->
     </div>
 </div>
