--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,8 @@
 body {
     font-family: "Roboto", sans-serif;
-    background-color: #fff; }
+    background-color: #fff; 
+    float: inline-end;
+  }
   
   p {
     color: #b3b3b3;
