--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,14 +9,15 @@
               <div class="text-center mb-5">
                 <h3 class="text-uppercase">Login to <strong>Colorlib</strong></h3>
               </div>
-              <form action="#" method="post">
+              
+              <form #f="ngForm" method="post" (ngSubmit)="onSubmit(f)">
                 <div class="form-group first">
-                  <label for="username">Username</label>
-                  <input type="text" class="form-control" placeholder="your-email@gmail.com" id="username">
+                  <label for="username">Nom d'utilisateur</label>
+                  <input type="text" name="username" class="form-control" placeholder="" id="username" ngModel>
                 </div>
                 <div class="form-group last mb-3">
-                  <label for="password">Password</label>
-                  <input type="password" class="form-control" placeholder="Your Password" id="password">
+                  <label for="password">mot de passe</label>
+                  <input type="password" name="mdp" class="form-control" placeholder="Votre mot de passe" id="password" ngModel>
                 </div>
                 
                 <div class="d-sm-flex mb-5 align-items-center">
@@ -24,7 +25,7 @@
                   </a>
                 </div>
 
-                <input type="submit" value="Log In" class="btn btn-block py-2 btn-primary">
+                <button type="submit" value="Log In" class="btn btn-block py-2 btn-primary">Valider</button>
               </form>
             </div>
           </div>
