--- a/src/app/plat/plat.component.css
+++ b/src/app/plat/plat.component.css
@@ -5,7 +5,7 @@ html, body {
 }
  .wrapper {
 	 width: 100%;
-	 height: 300px;
+	 height: 440px;
 	 background: white;
 	 margin: auto;
 	 overflow: hidden;
@@ -24,7 +24,7 @@ html, body {
  .wrapper .container .top {
 	 height: 80%;
 	 width: 100%;
-	 background: url(https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg) no-repeat center center;
+	 background: url(https://th.bing.com/th/id/OIP.YoPtMuDwR_LpQsANdXP4ZAHaE8?w=303&h=202&c=7&r=0&o=5&pid=1.7) no-repeat center center;
 	 -webkit-background-size: 100%;
 	 -moz-background-size: 100%;
 	 -o-background-size: 100%;
