--- a/src/app/plat/plat.component.html
+++ b/src/app/plat/plat.component.html
@@ -1,23 +1,22 @@
-
 <div class="card-body wrapper">
-    <div class="container">
-      <div class="top"></div>
-      <div class="bottom">
-        <div class="left">
-          <div class="details">
-            <h1>Chair</h1>
-            <p>£250</p>
-          </div>
-          <div class="buy"><i class="material-icons">Buy</i></div>
+  <div class="container">
+    <div class="top"></div>
+    <div class="bottom">
+      <div class="left">
+        <div class="details">
+          <h1>{{plat.name}}</h1>
+          <p>prix</p>
         </div>
+        <div class="buy"><button (click)="addToCart()"> Ajouter </button></div>
+      </div>
     </div>
     <div class="inside">
-      <div class="icon"><i class="material-icons">info_outline</i></div>
+      <div class="icon"><i class="material-icons">info</i></div>
       <div class="contents">
         <table>
           <tr>
-            <th>Width</th>
-            <th>Height</th>
+            <th>Plat tres bon</th>
+            <th>Description</th>
           </tr>
         </table>
       </div>
