--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,52 +1,43 @@
-<div class="d-md-flex half">
-  <div class="bg" style="background-image: url('https://ae01.alicdn.com/kf/H2b6f8e350ed34f70b103b58bd84d4acdp/Custom-Photo-Wallpaper-3D-Watercolor-Cafe-Restaurant-Background-Wall-Mural-Retro-Creative-Graffiti-Wall-Painting-Papel.jpg_Q90.jpg_.webp');"></div>
-  <div class="contents">
+<div class="row">
+  <div class="col-md-12 d-md-flex half">
+    <div class="bg"
+      style="background-image: url('https://ae01.alicdn.com/kf/H2b6f8e350ed34f70b103b58bd84d4acdp/Custom-Photo-Wallpaper-3D-Watercolor-Cafe-Restaurant-Background-Wall-Mural-Retro-Creative-Graffiti-Wall-Painting-Papel.jpg_Q90.jpg_.webp');">
+    </div>
+    <div class="contents">
 
-    <div class="container">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-md-12">
-          <div class="form-block mx-auto">
-            <div class="text-center mb-5">
-              <h3 class="text-uppercase">Inscription <strong>E-kaly</strong></h3>
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-12">
+            <div class="form-block mx-auto">
+              <div class="text-center mb-5">
+                <h3 class="text-uppercase">Inscription <strong>E-kaly</strong></h3>
+              </div>
+              <form #f="ngForm" method="POST" (ngSubmit)="onSubmit(f)">
+                <div class="form-group first">
+                  <label for="username">Nom d'utilisateur</label>
+                  <input type="text" name="username" class="form-control" placeholder="" id="username" ngModel>
+                </div>
+
+                <div class="form-group last mb-3">
+                  <label for="password">email</label>
+                  <input type="mail" name="email" class="form-control" placeholder="" ngModel>
+                </div>
+
+                <div class="form-group last mb-3">
+                  <label for="password">Mot de passe</label>
+                  <input type="password" name="mdp" class="form-control" placeholder="votre mot de passe" id="password"
+                    ngModel>
+                </div>
+
+                <div class="d-sm-flex mb-5 align-items-center">
+                  <a href="login" class="control control--checkbox mb-3 mb-sm-0"><span class="caption">Se
+                      connecter</span>
+                  </a>
+                </div>
+
+                <button type="submit" value="Log In" class="btn btn-block py-2 btn-primary">Valider</button>
+              </form>
             </div>
-            <form action="#" method="post">
-              <div class="form-group first">
-                <label for="username">Nom d'utilisateur</label>
-                <input type="text" name="username" class="form-control" placeholder="" id="username">
-              </div>
-              <div class="form-group last mb-3">
-                <label for="password">Tel</label>
-                <input type="text" name="tel" class="form-control" placeholder="">
-              </div>
-              <div class="form-group last mb-3">
-                <label for="password">Adresse</label>
-                <input type="text" name="address" class="form-control" placeholder="">
-              </div>
-              <div class="form-group last mb-3">
-                <label for="password">email</label>
-                <input type="mail" name="email" class="form-control" placeholder="">
-              </div>
-
-              <div class="form-group last mb-3">
-                <label for="password">Mot de passe</label>
-                <input type="password" class="form-control" placeholder="votre mot de passe" id="password">
-              </div>
-
-              <div class="form-group last mb-3">
-                <label for="password">Type</label>
-                <select name="role">
-                  <option *ngFor="let item of role" >{{item}}</option>
-                </select>
-                <input type="password" class="form-control" placeholder="votre mot de passe" id="password">
-              </div>
-              
-              <div class="d-sm-flex mb-5 align-items-center">
-                <a href="login" class="control control--checkbox mb-3 mb-sm-0"><span class="caption">Se connecter</span>
-                </a>
-              </div>
-
-              <input type="submit" value="Log In" class="btn btn-block py-2 btn-primary">
-            </form>
           </div>
         </div>
       </div>
