--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,10 +1,28 @@
-<div class="row">
+<div class="row bottom-div">
     <div class="col-md-3">
-        <ul>
-            <li><a href="admin/config/livreur"></a> Config livreur</li>
-            <li><a href="admin/config/restaurant"></a> Config restaurant</li>
-            <li><a href="admin/benefits"></a> Config restaurant</li>
-        </ul>
+        <nav class="menu" tabindex="0">
+            <div class="smartphone-menu-trigger"></div>
+            <header class="avatar">
+                <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" />
+                <h2>Admin</h2>
+            </header>
+            <ul>
+                <!-- <li tabindex="0" class="icon-dashboard"><span>Dashboard</span></li>
+                <li tabindex="0" class="icon-customers"><span>Customers</span></li>
+                <li tabindex="0" class="icon-users"><span>Users</span></li>
+                <li tabindex="0" class="icon-settings"><span>Settings</span></li> -->
+                <li tabindex="0" class="icon-settings">
+                    <h5><a href="admin/config/livreur"><span>Config livreur</span></a></h5>
+                </li>
+                <li tabindex="0" class="icon-settings">
+                    <h5><a href="admin/config/restaurant"><span>Config</span>
+                            restaurant</a></h5>
+                </li>
+                <li tabindex="0" class="icon-settings">
+                    <h5><a href="admin/benefits"><span>Benefice</span></a></h5>
+                </li>
+            </ul>
+        </nav>
     </div>
     <div class="col-md-9">
         <div class="row">
@@ -15,5 +33,5 @@
                 <app-user-table [list]="list"></app-user-table>
             </div>
         </div>
-
     </div>
+</div>
