--- a/src/app/commande-livreur/commande-livreur.component.html
+++ b/src/app/commande-livreur/commande-livreur.component.html
@@ -1,20 +1,39 @@
-<div class="container mt-5 px-2">
-    <div class="table-responsive">
-        <table class="table table-responsive table-bordered-stripped">
-            <thead>
-                <tr class="bg-light">
-                    <th scope="col" width="5%">Adresse de livraison</th>
-                    <th scope="col" width="20%">date</th>
-                    <th scope="col" width="20%">Livreur</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of list">
-                    <td>{{item._id}}</td>
-                    <td>{{item.livraisondate}}</td>
-                    <td>{{item.livreur}}</td>
-                </tr>
-            </tbody>
-        </table>
+<div class="row bottom-div">
+    <div class="col-md-3">
+        <nav class="menu" tabindex="0">
+            <div class="smartphone-menu-trigger"></div>
+            <header class="avatar">
+                <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" />
+                <h2>Livreur</h2>
+            </header>
+            <!-- <ul>
+                <li tabindex="0" class="icon-dashboard"><span>Dashboard</span></li>
+                <li tabindex="0" class="icon-customers"><span>Customers</span></li>
+                <li tabindex="0" class="icon-users"><span>Users</span></li>
+                <li tabindex="0" class="icon-settings"><span>Settings</span></li>
+            </ul> -->
+        </nav>
+    </div>
+    <div class="col-md-9">
+        <div class="container mt-5 px-2">
+            <div class="table-responsive">
+                <table class="table table-responsive table-bordered-stripped">
+                    <thead>
+                        <tr class="bg-light">
+                            <th scope="col" width="5%">Adresse de livraison</th>
+                            <th scope="col" width="20%">date</th>
+                            <th scope="col" width="20%">Livreur</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of list">
+                            <td>{{item._id}}</td>
+                            <td>{{item.livraisondate}}</td>
+                            <td><button (click)="livrer(item._id)">livrer</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
