--- a/src/app/commande-restaurant-table/commande-restaurant-table.component.html
+++ b/src/app/commande-restaurant-table/commande-restaurant-table.component.html
@@ -1,5 +1,28 @@
-<div class="container mt-5 px-2">
-    <div class="table-responsive">
+<div class="row bottom-div">
+    <div class="col-md-3">
+        <nav class="menu" tabindex="0">
+            <div class="smartphone-menu-trigger"></div>
+            <header class="avatar">
+                <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" />
+                <h2>Admin</h2>
+            </header>
+            <ul>
+                <!-- <li tabindex="0" class="icon-dashboard"><span>Dashboard</span></li>
+                <li tabindex="0" class="icon-customers"><span>Customers</span></li>
+                <li tabindex="0" class="icon-users"><span>Users</span></li>
+                <li tabindex="0" class="icon-settings"><span>Settings</span></li> -->
+                <li tabindex="0" class="icon-settings">
+                    <h5><a href="restaurant/admin"><span>Config Plat</span></a></h5>
+                </li>
+                <li tabindex="0" class="icon-settings">
+                    <h5><a href="restaurant/benefits"><span>Benefice</span>
+                        </a></h5>
+                </li>
+
+            </ul>
+        </nav>
+    </div>
+    <div class="col-md-9">
         <table class="table table-responsive table-bordered-stripped">
             <thead>
                 <tr class="bg-light">
@@ -10,8 +33,8 @@
             </thead>
             <tbody>
                 <tr *ngFor="let item of list">
-                    <td>{{item._id}}</td>
-                    <td>{{item.idplatrestaurant}}</td>
+                    <td>{{item.idcommande.address}}</td>
+                    <td>{{item.idplatrestaurant.name}}</td>
                     <td>{{item.islivrable}}</td>
                     <td>
                         <button (click)="onSubmit(item._id)">livrable</button>
