--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,3 @@
 <div class="sidenav">
-    <a *ngFor="let item of listrestaurant"  href="plat/{{item.username}}">{{item.username}}</a>
+    <a *ngFor="let item of listrestaurant" href="plat/{{item._id}}">{{item.username}}</a>
 </div>
