--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -1,8 +1,35 @@
-<div class="row">
-    <div class="col-md-5">
-        <app-plat-form [listrestaurant]="listrestaurant"></app-plat-form>
+<div class="row bottom-div">
+    <div class="col-md-3">
+        <nav class="menu" tabindex="0">
+            <div class="smartphone-menu-trigger"></div>
+            <header class="avatar">
+                <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" />
+                <h2>Admin</h2>
+            </header>
+            <ul>
+                <!-- <li tabindex="0" class="icon-dashboard"><span>Dashboard</span></li>
+                <li tabindex="0" class="icon-customers"><span>Customers</span></li>
+                <li tabindex="0" class="icon-users"><span>Users</span></li>
+                <li tabindex="0" class="icon-settings"><span>Settings</span></li> -->
+                <li tabindex="0" class="icon-settings">
+                    <h5><a href="restaurant/admin"><span>Config Plat</span></a></h5>
+                </li>
+                <li tabindex="0" class="icon-settings">
+                    <h5><a href="restaurant/benefits"><span>Benefice</span>
+                        </a></h5>
+                </li>
+
+            </ul>
+        </nav>
     </div>
-    <div class="col-md-7">
-        <app-plat-table [listplat]="listplat"></app-plat-table>
+    <div class="col-md-9">
+        <div class="row">
+            <div class="col-md-5">
+                <app-plat-form [listrestaurant]="listrestaurant"></app-plat-form>
+            </div>
+            <div class="col-md-7">
+                <app-plat-table [listplat]="listplat"></app-plat-table>
+            </div>
+        </div>
     </div>
 </div>
