--- a/src/app/plat/plat.component.css
+++ b/src/app/plat/plat.component.css
@@ -1,144 +1,195 @@
-html, body {
-	 background: #e3e3d8;
-	 font-family: sans-serif;
-     margin-top: 11px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+*{
+  font-family: 'Poppins', sans-serif;
 }
- .wrapper {
-	 width: 100%;
-	 height: 440px;
-	 background: white;
-	 margin: auto;
-	 overflow: hidden;
-	 box-shadow: 0;
-	 transform: scale(0.95);
-	 transition: box-shadow 0.5s, transform 0.5s;
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #131313;
 }
- .wrapper:hover {
-	 transform: scale(1);
-	 box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2);
+
+.container{
+  position: relative;
 }
- .wrapper .container {
-	 width: 300px;
-	 height: 100%;
+
+.container .card{
+  position: relative;
+  width: 320px;
+  height: 450px;
+  background: #232323;
+  border-radius: 20px;
+  overflow: hidden;
 }
- .wrapper .container .top {
-	 height: 80%;
-	 width: 100%;
-	 background: url(https://th.bing.com/th/id/OIP.YoPtMuDwR_LpQsANdXP4ZAHaE8?w=303&h=202&c=7&r=0&o=5&pid=1.7) no-repeat center center;
-	 -webkit-background-size: 100%;
-	 -moz-background-size: 100%;
-	 -o-background-size: 100%;
-	 background-size: 100%;
+
+.container .card:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #9bdc28;
+  clip-path: circle(150px at 80% 20%);
+  transition: 0.5s ease-in-out;
 }
- .wrapper .container .bottom .left .details {
-	 padding: 20px;
-	 float: left;
-	 width: calc(70% - 40px);
+
+.container .card:hover:before{
+  clip-path: circle(300px at 80% -20%);
 }
- .wrapper .container .bottom .left .buy {
-	 float: right;
-	 width: calc(30% - 2px);
-	 height: 100%;
-	 background: #f1f1f1;
-	 transition: background 0.5s;
-	 border-left: solid thin rgba(0, 0, 0, 0.1);
+
+.container .card:after{
+  content: 'Nike';
+  position: absolute;
+  top: 30%;
+  left: -20%;
+  font-size: 12em;
+  font-weight: 800;
+  font-style: italic;
+  color: rgba(255,255,25,0.05)
 }
- .wrapper .container .bottom .left .buy i {
-	 font-size: 20px;
-	 padding: 30px;
-	 color: #254053;
-	 transition: transform 0.5s;
+
+.container .card .imgBx{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10000;
+  width: 100%;
+  height: 220px;
+  transition: 0.5s;
 }
- .wrapper .container .bottom .right {
-	 width: 50%;
-	 background: #a6cdde;
-	 color: white;
-	 float: right;
-	 height: 200%;
-	 overflow: hidden;
+
+.container .card:hover .imgBx{
+  top: 0%;
+  transform: translateY(0%);
+    
 }
- .wrapper .container .bottom .right .details {
-	 padding: 20px;
-	 float: right;
-	 width: calc(70% - 40px);
+
+.container .card .imgBx img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-25deg);
+  width: 270px;
 }
- .wrapper .container .bottom .right .done {
-	 width: calc(30% - 2px);
-	 float: left;
-	 transition: transform 0.5s;
-	 border-right: solid thin rgba(255, 255, 255, 0.3);
-	 height: 50%;
+
+.container .card .contentBx{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  transition: 1s;
+  z-index: 10;
 }
- .wrapper .container .bottom .right .done i {
-	 font-size: 30px;
-	 padding: 30px;
-	 color: white;
+
+.container .card:hover .contentBx{
+  height: 210px;
 }
- .wrapper .container .bottom .right .remove {
-	 width: calc(30% - 1px);
-	 clear: both;
-	 border-right: solid thin rgba(255, 255, 255, 0.3);
-	 height: 50%;
-	 background: #bc3b59;
-	 transition: transform 0.5s, background 0.5s;
+
+.container .card .contentBx h2{
+  position: relative;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #fff;
+  margin: 0;
 }
- .wrapper .container .bottom .right .remove i {
-	 transition: transform 0.5s;
-	 font-size: 30px;
-	 padding: 30px;
-	 color: white;
+
+.container .card .contentBx .size, .container .card .contentBx .color {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 20px;
+  transition: 0.5s;opacity: 0;
+  visibility: hidden;
+  padding-top: 0;
+  padding-bottom: 0;
 }
- .wrapper .inside {
-	 z-index: 9;
-	 background: #92879b;
-	 width: 140px;
-	 height: 140px;
-	 position: absolute;
-	 top: -70px;
-	 right: -70px;
-	 border-radius: 0px 0px 200px 200px;
-	 transition: all 0.5s, border-radius 2s, top 1s;
-	 overflow: hidden;
+
+.container .card:hover .contentBx .size{
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0.5s;
 }
- .wrapper .inside .icon {
-	 position: absolute;
-	 right: 85px;
-	 top: 85px;
-	 color: white;
-	 opacity: 1;
+
+.container .card:hover .contentBx .color{
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0.6s;
 }
- .wrapper .inside:hover {
-	 width: 100%;
-	 right: 0;
-	 top: 0;
-	 border-radius: 0;
-	 height: 80%;
+
+.container .card .contentBx .size h3, .container .card .contentBx .color h3{
+  color: #fff;
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-right: 10px;
 }
- .wrapper .inside:hover .icon {
-	 opacity: 0;
-	 right: 15px;
-	 top: 15px;
+
+.container .card .contentBx .size span{
+  width: 26px;
+  height: 26px;
+  text-align: center;
+  line-height: 26px;
+  font-size: 14px;
+  display: inline-block;
+  color: #111;
+  background: #fff;
+  margin: 0 5px;
+  transition: 0.5s;
+  color: #111;
+  border-radius: 4px;
+  cursor: pointer;
 }
- .wrapper .inside:hover .contents {
-	 opacity: 1;
-	 transform: scale(1);
-	 transform: translateY(0);
+
+.container .card .contentBx .size span:hover{
+  background: #9bdc28;
 }
- .wrapper .inside .contents {
-	 padding: 5%;
-	 opacity: 0;
-	 transform: scale(0.5);
-	 transform: translateY(-200%);
-	 transition: opacity 0.2s, transform 0.8s;
+
+.container .card .contentBx .color span{
+  width: 20px;
+  height: 20px;
+  background: #ff0;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
 }
- .wrapper .inside .contents table {
-	 text-align: left;
-	 width: 100%;
+
+.container .card .contentBx .color span:nth-child(2){
+  background: #9bdc28;
 }
- .wrapper .inside .contents h1, .wrapper .inside .contents p, .wrapper .inside .contents table {
-	 color: white;
+
+.container .card .contentBx .color span:nth-child(3){
+  background: #03a9f4;
 }
- .wrapper .inside .contents p {
-	 font-size: 13px;
+
+.container .card .contentBx .color span:nth-child(4){
+  background: #e91e63;
 }
- 
+
+.container .card .contentBx a{
+  display: inline-block;
+  padding: 10px 20px;
+  background: #fff;
+  border-radius: 4px;
+  margin-top: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #111;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: 0.5s;
+  margin-top: 0;
+}
+
+.container .card:hover .contentBx a{
+  opacity: 1;
+  transform: translateY(0px);
+  transition-delay: 0.75s;
+  
+}
