--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
           <div class="col-md-12">
             <div class="form-block mx-auto">
               <div class="text-center mb-5">
-                <h3 class="text-uppercase">Login to <strong>Colorlib</strong></h3>
+                <h3 class="text-uppercase">Login to <strong>E-Kaly</strong></h3>
               </div>
               
               <form #f="ngForm" method="post" (ngSubmit)="onSubmit(f)">
