--- a/src/app/plat/plat.component.html
+++ b/src/app/plat/plat.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card">
     <div class="imgBx">
-      <img src="https://assets.codepen.io/4164355/shoes.png">
+      <img src="https://e7.pngegg.com/pngimages/201/77/png-clipart-delicious-beef-burger-delicious-beef-burger-tomato.png">
     </div>
     <div class="contentBx">
       <h2>{{plat.name}}</h2>
